* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.6
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Thu Nov 01 2018 Jeanne Greulich <jeanner.greulich@onyxpoint.com> - 0.0.5
- Update static assets for puppet 5
- Update to onyxpoint OEL boxes in acceptance tests

* Sun Mar 11 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.4
- Updated to work with Puppet 5 and OEL

* Fri May 19 2017 Nick Miller <nick.miller@onyxpoint.com> - 0.0.3
- Remove deprecated `audit` metaparameter
- Update puppet dependency

* Wed Apr 26 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.3
- Ensure that entries in 'at.allow' are not commented out by default
- Updated the Gemfile to pin to the latest working Beaker

* Thu Mar 02 2017 Nick Miller <nick.miller@onxypoint.com> - 0.0.2
- Manage at package

* Wed Dec 7 2016 Nick Miller <nick.miller@onxypoint.com> - 0.0.1
- First cut
- Content moved from simplib, added tests