@@ -3,6 +3,6 @@ fixtures:
   repositories:
     stdlib: https://github.com/simp/puppetlabs-stdlib.git
     simplib: https://github.com/simp/pupmod-simp-simplib.git
-    simpcat: https://github.com/simp/pupmod-simp-simpcat.git
+    concat: https://github.com/simp/puppetlabs-concat.git
   symlinks:
     at: "#{source_dir}"
